apps/radarr/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    app: radarr
