apps/radarr/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.home`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
